--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -15,7 +15,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.8", "3.9", "3.10"]
+        python-version: ["3.7", "3.8","3.9"]
 
     steps:
     - uses: actions/checkout@v3
@@ -43,7 +43,7 @@ jobs:
   deploy-package:
 
     runs-on: ubuntu-latest
-
+    needs: test
     steps:
       - uses: actions/checkout@v3
       - name: Set up Python
@@ -64,7 +64,7 @@ jobs:
 
   docker-build:
     runs-on: ubuntu-latest
-
+    needs: deploy-package
     steps:
     - uses: actions/checkout@v3
     - name: Build the Docker image
