--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -23,6 +23,10 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: ${{ matrix.python-version }}
+    - name: Run Venv
+      run: |
+          python -m venv env
+          source env/bin/activate
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
@@ -41,7 +45,6 @@ jobs:
         pytest
 
   deploy-package:
-
     runs-on: ubuntu-latest
     needs: test
     steps:
