--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -36,7 +36,7 @@ jobs:
     - name: Test with pytest
       run: |
         export PROTOCOL_BUFFERS_PYTHON_IMPLEMENTATION=python
-        pytest
+        python -m pytest
 
   deploy-package:
     runs-on: ubuntu-latest
