--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -10,61 +10,78 @@ on:
     branches: [ "main" ]
 
 jobs:
-  test:
-    runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        python-version: ["3.7", "3.8","3.9"]
-
-    steps:
-    - uses: actions/checkout@v3
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v3
-      with:
-        python-version: ${{ matrix.python-version }}
-    - name: Run Venv
-      run: |
-          python -m venv env
-          source env/bin/activate
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        python -m pip install flake8 pytest
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-        if [ -f requirements.dev.txt ]; then pip install -r requirements.dev.txt; fi
-    - name: Test with pytest
-      run: |
-        export PROTOCOL_BUFFERS_PYTHON_IMPLEMENTATION=python
-        python -m pytest
-
-  deploy-package:
-    runs-on: ubuntu-latest
-    needs: test
-    steps:
-      - uses: actions/checkout@v3
-      - name: Set up Python
-        uses: actions/setup-python@v3
-        with:
-          python-version: '3.x'
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install build
-      - name: Build package
-        run: python -m build
-      - name: Publish package
-        uses: pypa/gh-action-pypi-publish@27b31702a0e7fc50959f5ad993c78deac1bdfc29
-        with:
-          user: __token__
-          password: ${{ secrets.PYPI_API_TOKEN }}
+#  test:
+#    runs-on: ubuntu-latest
+#    strategy:
+#      fail-fast: false
+#      matrix:
+#        python-version: ["3.7", "3.8","3.9"]
+#
+#    steps:
+#    - uses: actions/checkout@v3
+#    - name: Set up Python ${{ matrix.python-version }}
+#      uses: actions/setup-python@v3
+#      with:
+#        python-version: ${{ matrix.python-version }}
+#    - name: Run Venv
+#      run: |
+#          python -m venv env
+#          source env/bin/activate
+#    - name: Install dependencies
+#      run: |
+#        python -m pip install --upgrade pip
+#        python -m pip install flake8 pytest
+#        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+#        if [ -f requirements.dev.txt ]; then pip install -r requirements.dev.txt; fi
+#    - name: Test with pytest
+#      run: |
+#        export PROTOCOL_BUFFERS_PYTHON_IMPLEMENTATION=python
+#        python -m pytest
+#
+#  deploy-package:
+#    runs-on: ubuntu-latest
+#    needs: test
+#    steps:
+#      - uses: actions/checkout@v3
+#      - name: Set up Python
+#        uses: actions/setup-python@v3
+#        with:
+#          python-version: '3.x'
+#      - name: Install dependencies
+#        run: |
+#          python -m pip install --upgrade pip
+#          pip install build
+#      - name: Build package
+#        run: python -m build
+#      - name: Publish package
+#        uses: pypa/gh-action-pypi-publish@27b31702a0e7fc50959f5ad993c78deac1bdfc29
+#        with:
+#          user: __token__
+#          password: ${{ secrets.PYPI_API_TOKEN }}
 
   docker-build:
     runs-on: ubuntu-latest
-    needs: deploy-package
+    #needs: deploy-package
     steps:
     - uses: actions/checkout@v3
-    - name: Build the Docker image
-      run: |
-            VERSION=`python -c "from mlserver_openvino.version import __version__;print(__version__)"`
-            docker build . --file Dockerfile --tag gawsoft/mlserver-openvino:$VERSION
+    - name: Log in to Docker Hub
+      uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+    - name: Extract metadata (tags, labels) for Docker
+      id: meta
+      uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
+      with:
+        images: gawsoft/mlserver-openvino
+    - name: Build and push Docker image
+      uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
+      with:
+        context: .
+        push: true
+        tags: ${{ steps.meta.outputs.tags }}
+        labels: ${{ steps.meta.outputs.labels }}
+#    - name: Build the Docker image
+#      run: |
+#            VERSION=`python -c "from mlserver_openvino.version import __version__;print(__version__)"`
+#            docker build . --file Dockerfile --tag gawsoft/mlserver-openvino:$VERSION
