--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -66,22 +66,18 @@ jobs:
     - uses: actions/checkout@v3
     - name: Log in to Docker Hub
       uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
-      with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
+      run: |
+            echo  ${{ secrets.DOCKER_PASSWORD }} | docker login ${{ secrets.DOCKER_USERNAME }} -u $ --password-stdin
     - name: Extract metadata (tags, labels) for Docker
       id: meta
       uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
       with:
         images: gawsoft/mlserver-openvino
-    - name: Build and push Docker image
-      uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
-      with:
-        context: .
-        push: true
-        tags: ${{ steps.meta.outputs.tags }}
-        labels: ${{ steps.meta.outputs.labels }}
-#    - name: Build the Docker image
-#      run: |
-#            VERSION=`python -c "from mlserver_openvino.version import __version__;print(__version__)"`
-#            docker build . --file Dockerfile --tag gawsoft/mlserver-openvino:$VERSION
+    - name: Build the Docker image
+      uses: actions/setup-python@v3
+      run: |
+            python -m pip install --upgrade pip
+            python -m pip install flake8 pytest
+            if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+            mlserver build -t ${{ steps.meta.outputs.tags }}:${{ steps.meta.outputs.labels }}
+            docker image push ${{ steps.meta.outputs.tags }}:${{ steps.meta.outputs.labels }}
