--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -66,7 +66,7 @@ jobs:
     - uses: actions/checkout@v3
     - name: Log in to Docker Hub
       run: |
-            echo  ${{ secrets.DOCKER_PASSWORD }} | docker login ${{ secrets.DOCKER_USERNAME }} -u $ --password-stdin
+            echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
     - name: Extract metadata (tags, labels) for Docker
       id: meta
       uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
