--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -75,6 +75,7 @@ jobs:
         images: gawsoft/mlserver-openvino
     - name: Build the Docker image
       run: |
+            echo ${{ steps.meta.outputs.tags }}:${{ steps.meta.outputs.labels }}
             export PROTOCOL_BUFFERS_PYTHON_IMPLEMENTATION=python
             python -m pip install --upgrade pip
             python -m pip install flake8 pytest
