--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -75,7 +75,7 @@ jobs:
         images: gawsoft/mlserver-openvino
     - name: Build the Docker image
       run: |
-            VERSION=0.1.0
+            export VERSION=0.1.0
             export PROTOCOL_BUFFERS_PYTHON_IMPLEMENTATION=python
             python -m pip install --upgrade pip
             python -m pip install flake8 pytest
