--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -10,54 +10,54 @@ on:
     branches: [ "main" ]
 
 jobs:
-#  test:
-#    runs-on: ubuntu-latest
-#    strategy:
-#      fail-fast: false
-#      matrix:
-#        python-version: ["3.7", "3.8","3.9"]
-#
-#    steps:
-#    - uses: actions/checkout@v3
-#    - name: Set up Python ${{ matrix.python-version }}
-#      uses: actions/setup-python@v3
-#      with:
-#        python-version: ${{ matrix.python-version }}
-#    - name: Run Venv
-#      run: |
-#          python -m venv env
-#          source env/bin/activate
-#    - name: Install dependencies
-#      run: |
-#        python -m pip install --upgrade pip
-#        python -m pip install flake8 pytest
-#        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-#        if [ -f requirements.dev.txt ]; then pip install -r requirements.dev.txt; fi
-#    - name: Test with pytest
-#      run: |
-#        export PROTOCOL_BUFFERS_PYTHON_IMPLEMENTATION=python
-#        python -m pytest
-#
-#  deploy-package:
-#    runs-on: ubuntu-latest
-#    needs: test
-#    steps:
-#      - uses: actions/checkout@v3
-#      - name: Set up Python
-#        uses: actions/setup-python@v3
-#        with:
-#          python-version: '3.x'
-#      - name: Install dependencies
-#        run: |
-#          python -m pip install --upgrade pip
-#          pip install build
-#      - name: Build package
-#        run: python -m build
-#      - name: Publish package
-#        uses: pypa/gh-action-pypi-publish@27b31702a0e7fc50959f5ad993c78deac1bdfc29
-#        with:
-#          user: __token__
-#          password: ${{ secrets.PYPI_API_TOKEN }}
+  test:
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        python-version: ["3.7", "3.8","3.9"]
+
+    steps:
+    - uses: actions/checkout@v3
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v3
+      with:
+        python-version: ${{ matrix.python-version }}
+    - name: Run Venv
+      run: |
+          python -m venv env
+          source env/bin/activate
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        python -m pip install flake8 pytest
+        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+        if [ -f requirements.dev.txt ]; then pip install -r requirements.dev.txt; fi
+    - name: Test with pytest
+      run: |
+        export PROTOCOL_BUFFERS_PYTHON_IMPLEMENTATION=python
+        python -m pytest
+
+  deploy-package:
+    runs-on: ubuntu-latest
+    needs: test
+    steps:
+      - uses: actions/checkout@v3
+      - name: Set up Python
+        uses: actions/setup-python@v3
+        with:
+          python-version: '3.x'
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install build
+      - name: Build package
+        run: python -m build
+      - name: Publish package
+        uses: pypa/gh-action-pypi-publish@27b31702a0e7fc50959f5ad993c78deac1bdfc29
+        with:
+          user: __token__
+          password: ${{ secrets.PYPI_API_TOKEN }}
 
 
   docker-build:
