--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -4,43 +4,42 @@
 name: Python package
 
 on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+  tags:
+    - 'v*'
 
 jobs:
-  test:
+  release:
     runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        python-version: ["3.7", "3.8","3.9"]
-
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v3
+    - name: Create Draft Release
+      id: create_release
+      uses: actions/create-release@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        python-version: ${{ matrix.python-version }}
-    - name: Run Venv
-      run: |
-          python -m venv env
-          source env/bin/activate
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        python -m pip install flake8 pytest
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-        if [ -f requirements.dev.txt ]; then pip install -r requirements.dev.txt; fi
-    - name: Test with pytest
-      run: |
-        export PROTOCOL_BUFFERS_PYTHON_IMPLEMENTATION=python
-        python -m pytest
+        tag_name: <tofill>
+        release_name: <tofill>
+        draft: true
+        prerelease: false
+
+    - uses: actions/upload-release-asset@v1.0.1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        asset_path: ./my-artifact.zip
+        asset_name: my-artifact.zip
+        asset_content_type: application/zip
+
+    - uses: eregon/publish-release@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        release_id: ${{ steps.create_release.outputs.id }}
 
   deploy-package:
     runs-on: ubuntu-latest
-    needs: test
+    needs: release
     steps:
       - uses: actions/checkout@v3
       - name: Set up Python
