--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -18,6 +18,7 @@ jobs:
 
   deploy-package:
     runs-on: ubuntu-latest
+    needs: tests-before-publish
     steps:
       - uses: actions/checkout@v3
       - name: Set up Python
