--- a/kserve/cluster-runtime.yaml
+++ b/kserve/cluster-runtime.yaml
@@ -1,7 +1,7 @@
 apiVersion: serving.kserve.io/v1alpha1
 kind: ClusterServingRuntime
 metadata:
-  name: kserve-mlserve-openvino
+  name: kserve-mlserver-openvino
 spec:
   supportedModelFormats:
     - name: openvino
@@ -19,7 +19,7 @@ spec:
           value: "8080"
         - name: "MLSERVER_GRPC_PORT"
           value: "9000"
-        - name: "MODELS_DIR"
+        - name: "MLSERVER_MODELS_DIR"
           value: "/mnt/models"
       resources:
         requests:
