--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -37,6 +37,33 @@ jobs:
           user: __token__
           password: ${{ secrets.PYPI_API_TOKEN }}
 
+  docker-build-converter:
+    runs-on: ubuntu-latest
+    needs: deploy-package
+    steps:
+    - uses: actions/checkout@v3
+    - name: Log in to Docker Hub
+      run: |
+            echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
+    - name: Extract metadata (tags, labels) for Docker
+      id: meta
+      uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
+      with:
+        images: gawsoft/mlserver-openvino
+    - name: Build the Docker image
+      run: |
+            export PROTOCOL_BUFFERS_PYTHON_IMPLEMENTATION=python
+            python -m pip install --upgrade pip
+            python -m pip install flake8 pytest
+            if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+            VERSION=`python -c "from mlserver_openvino.version import __version__;print(__version__)"`
+            make build-docker-convert
+            docker image tag convert-onnx-to-openvino gawsoft/mlserver-openvino-onnx-converter:$VERSION
+            docker image push gawsoft/mlserver-openvino-onnx-converter:$VERSION
+            # Publish latest
+            docker image tag gawsoft/mlserver-openvino-onnx-converter:$VERSION gawsoft/mlserver-openvino:latest
+            docker image push gawsoft/mlserver-openvino-onnx-converter:latest
+        
 
   docker-build:
     runs-on: ubuntu-latest
