--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-mlserver>=1.1.0
-openvino>=2022.1.0
-openvino-dev[onnx]>=2022.1.0
-openvino-dev[extras]>=2022.1.0
-numpy<1.20
+mlserver>=1.2.1
+openvino>=2022.3.0
+openvino-dev[onnx]>=2022.3.0
+openvino-dev[extras]>=2022.3.0
+numpy<=1.23.4
 grpcio>=1.47.0
