Add tests for codecs. Fix convert docker

--- a/converter_docker/Dockerfile
+++ b/converter_docker/Dockerfile
@@ -5,5 +5,7 @@ RUN pip install -r requirements.txt
 
 USER 1000
 
-COPY mlserver_openvino .
+COPY mlserver_openvino mlserver_openvino
+COPY mlserver_openvino/convert.py convert.py
+
 ENTRYPOINT python convert.py /mnt/model/model.onnx /mnt/openvino
